ambient/070-resilience/02-request-timeout.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: travels-request-timeout
  namespace: travel-agency
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: travels
    port: 8000
  rules:
  - backendRefs:
    - name: travels
      port: 8000
    timeouts:
      request: 1s
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: travels-request-timeout
  namespace: travel-agency
spec:
  hosts:
  - travels
  http:
  - timeout: 3s
    retries:
      attempts: 2          
      perTryTimeout: 1s
      retryOn: 5xx,connect-failure,refused-stream,reset,timeout  
    route:
    - destination:
        host: travels
